--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.5.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
+    "mongoose": "^8.6.3",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
